Include script.js in appointments.html
Added a script tag to include script.js for functionality.

--- a/appointments.html
+++ b/appointments.html
@@ -27,6 +27,7 @@
         <textarea placeholder="Health Issue"></textarea>
         <button>Submit</button>
     </form>
+    <script src="./script.js"></script>
 </div>
 </body>
 </html>
