Add script tag for external JavaScript file
Added a script tag to include script.js.

--- a/contact.html
+++ b/contact.html
@@ -22,5 +22,6 @@
   <p><b>📲Phone:</b> +91 98765 43210</p>
   <p><b>✉️Email:</b> citycare@hospital.com</p>
 </div>
+<script src="./script.js"></script>
 </body>
 </html>
